--- a/about.html
+++ b/about.html
@@ -2,13 +2,14 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me</title>
+    <title>About Me - Skills & Academic Journey</title>
     <!-- Tailwind CSS CDN -->
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
 </head>
-<body class="bg-white text-gray-800">
+<body class="bg-gray-100">
+
     <!-- Navbar -->
     <nav class="flex justify-between items-center p-6 bg-transparent absolute w-full top-0">
         <!-- Logo -->
@@ -23,93 +24,83 @@
         </ul>
     </nav>
 
+    <!-- Header -->
+    <header class="bg-white py-24 shadow-md mt-16">
+        <div class="container mx-auto px-6">
+            <h1 class="text-4xl font-bold text-black text-center">About Me</h1>
+        </div>
+    </header>
+
     <!-- Skills Section -->
-    <section class="p-6 mt-24 max-w-4xl mx-auto flex justify-between items-start">
-        <!-- Skills Heading -->
-        <div class="w-1/3 pr-6">
-            <h2 class="text-4xl font-bold mb-12">Skills</h2>
-        </div>
-        <!-- Skills Tiles -->
-        <div class="w-2/3 grid grid-cols-3 gap-6">
-            <div class="skill-tile bg-gray-200 p-8 text-center rounded shadow">
-                <img src="html-logo.png" alt="HTML" class="mx-auto mb-4 h-16">
-                <h3 class="text-lg font-bold">HTML</h3>
-            </div>
-            <div class="skill-tile bg-gray-200 p-8 text-center rounded shadow">
-                <img src="css-logo.png" alt="CSS" class="mx-auto mb-4 h-16">
-                <h3 class="text-lg font-bold">CSS</h3>
-            </div>
-            <div class="skill-tile bg-gray-200 p-8 text-center rounded shadow">
-                <img src="js-logo.png" alt="JavaScript" class="mx-auto mb-4 h-16">
-                <h3 class="text-lg font-bold">JavaScript</h3>
-            </div>
-            <div class="skill-tile bg-gray-200 p-8 text-center rounded shadow">
-                <img src="tailwind-logo.png" alt="Tailwind CSS" class="mx-auto mb-4 h-16">
-                <h3 class="text-lg font-bold">Tailwind CSS</h3>
-            </div>
-            <div class="skill-tile bg-gray-200 p-8 text-center rounded shadow">
-                <img src="react-logo.png" alt="React" class="mx-auto mb-4 h-16">
-                <h3 class="text-lg font-bold">React</h3>
-            </div>
-            <div class="skill-tile bg-gray-200 p-8 text-center rounded shadow">
-                <img src="node-logo.png" alt="Node.js" class="mx-auto mb-4 h-16">
-                <h3 class="text-lg font-bold">Node.js</h3>
-            </div>
-            <div class="skill-tile bg-gray-200 p-8 text-center rounded shadow">
-                <img src="python-logo.png" alt="Python" class="mx-auto mb-4 h-16">
-                <h3 class="text-lg font-bold">Python</h3>
-            </div>
-            <div class="skill-tile bg-gray-200 p-8 text-center rounded shadow">
-                <img src="git-logo.png" alt="Git" class="mx-auto mb-4 h-16">
-                <h3 class="text-lg font-bold">Git</h3>
-            </div>
-            <div class="skill-tile bg-gray-200 p-8 text-center rounded shadow">
-                <img src="sql-logo.png" alt="SQL" class="mx-auto mb-4 h-16">
-                <h3 class="text-lg font-bold">SQL</h3>
-            </div>
-        </div>
-    </section>
-
-    <!-- My Journey Section -->
-    <section class="p-6 mt-12 max-w-4xl mx-auto flex justify-between items-start">
-        <!-- My Journey Heading -->
-        <div class="w-1/3 pr-6">
-            <h2 class="text-4xl font-bold mb-12">My Journey</h2>
-        </div>
-        <!-- Timeline -->
-        <div class="w-2/3">
-            <div class="timeline">
-                <!-- Timeline Item 1 -->
-                <div class="timeline-item">
-                    <div class="timeline-marker"></div>
-                    <div class="timeline-content">
-                        <h3 class="text-xl font-bold">VIT-AP University</h3>
-                        <span class="text-gray-500">2022 - 2026</span>
-                        <ul class="list-disc ml-6 mt-2 text-gray-700">
-                            <li>Bachelor of Science in Electronics and Communication</li>
-                            <li>Financial Lead at IEEE-MTT SB VIT-AP</li>
-                        </ul>
-                    </div>
+    <section class="bg-white py-10">
+        <div class="container mx-auto px-6">
+            <h2 class="text-3xl font-bold text-black mb-6 text-center">Skills</h2>
+            <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 gap-6">
+                <!-- Skill Tile -->
+                <div class="bg-black text-white p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300">
+                    <h3 class="text-xl font-semibold mb-2">Verilog</h3>
+                    <p class="text-sm">Proficient in digital design and simulation using Verilog for FPGA development.</p>
                 </div>
-                <!-- Timeline Item 2 -->
-                <div class="timeline-item">
-                    <div class="timeline-marker"></div>
-                    <div class="timeline-content">
-                        <h3 class="text-xl font-bold">Sri Chaitanya Junior College</h3>
-                        <span class="text-gray-500">2020 - 2022</span>
-                        <ul class="list-disc ml-6 mt-2 text-gray-700">
-                            <li>Score - 95.2%</li>
-                        </ul>
-                    </div>
+                <!-- Skill Tile -->
+                <div class="bg-black text-white p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300">
+                    <h3 class="text-xl font-semibold mb-2">FPGA Programming</h3>
+                    <p class="text-sm">Experience in FPGA programming and implementation of digital circuits.</p>
+                </div>
+                <!-- Skill Tile -->
+                <div class="bg-black text-white p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300">
+                    <h3 class="text-xl font-semibold mb-2">VLSI Design</h3>
+                    <p class="text-sm">Understanding of VLSI design principles, including circuit optimization and layout.</p>
+                </div>
+                <!-- Skill Tile -->
+                <div class="bg-black text-white p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300">
+                    <h3 class="text-xl font-semibold mb-2">Digital Signal Processing</h3>
+                    <p class="text-sm">Knowledge of DSP algorithms and their hardware implementations.</p>
+                </div>
+                <!-- Skill Tile -->
+                <div class="bg-black text-white p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300">
+                    <h3 class="text-xl font-semibold mb-2">Problem Solving</h3>
+                    <p class="text-sm">Strong analytical skills in tackling complex technical problems.</p>
+                </div>
+                <!-- Skill Tile -->
+                <div class="bg-black text-white p-6 rounded-lg shadow-md hover:shadow-xl transition-shadow duration-300">
+                    <h3 class="text-xl font-semibold mb-2">Team Collaboration</h3>
+                    <p class="text-sm">Effective teamwork skills developed through projects and leadership roles.</p>
                 </div>
             </div>
         </div>
     </section>
 
-    <footer class="text-center p-4 bg-black text-white mt-10">
-        <p>&copy; 2024 Your Name</p>
+    <!-- Journey of My Academics Section -->
+    <section class="bg-gray-50 py-10">
+        <div class="container mx-auto px-6">
+            <h2 class="text-3xl font-bold text-black mb-6 text-center">Journey of My Academics</h2>
+            <div class="border-l-4 border-black pl-4">
+                <!-- Academic Entry -->
+                <div class="mb-6">
+                    <h3 class="text-2xl font-semibold text-black">BTech in Electronics and Communication Engineering</h3>
+                    <span class="text-gray-600">2021 - Present | Your University</span>
+                    <p class="mt-2 text-sm text-gray-700">Engaged in courses covering VLSI, digital design, and communication systems, developing a strong foundation in electronics.</p>
+                </div>
+                <!-- Academic Entry -->
+                <div class="mb-6">
+                    <h3 class="text-2xl font-semibold text-black">Higher Secondary Education</h3>
+                    <span class="text-gray-600">2019 - 2021 | ABC School</span>
+                    <p class="mt-2 text-sm text-gray-700">Specialized in Physics, Chemistry, and Mathematics, achieving top grades and developing a keen interest in electronics.</p>
+                </div>
+                <!-- Academic Entry -->
+                <div>
+                    <h3 class="text-2xl font-semibold text-black">Secondary Education</h3>
+                    <span class="text-gray-600">2017 - 2019 | XYZ School</span>
+                    <p class="mt-2 text-sm text-gray-700">Completed my foundational education with a focus on science and technology, laying the groundwork for my future studies.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Footer -->
+    <footer class="bg-white py-4 text-center">
+        <p class="text-sm text-gray-600">© 2024 Your Name. All rights reserved.</p>
     </footer>
 
-    <script src="script.js"></script>
 </body>
 </html>
